--- a/styles.css
+++ b/styles.css
@@ -321,4 +321,17 @@ nav{
         margin-top: 0.5rem;
         margin-bottom: 0.5rem;
     }
+    #welcome-section h1{
+        font-size: 3rem;
+    }
+    #welcome-section h2{
+        font-size: 1.5rem;
+    }
+    #contact h1{
+        font-size: 3rem;
+    }
+    #contact h2{
+        font-size: 1.5rem;
+    }
+}
 }
