--- a/styles.css
+++ b/styles.css
@@ -283,10 +283,23 @@ nav{
     padding: 2rem;
 }
 
+/* Media queries */
+.klein{
+    display:hidden
+}
+
 @media (max-width:1000px){
     .content{
         padding-left: 15px;
         padding-right: 15px;
+    }
+}
+@media (max-width:950px){
+    .groß{
+        display: hidden;
+    }
+    .klein{
+        display: unset;
     }
 }
 
