--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,37 @@ html{
     margin-inline: auto;
 }
 
+/* swiper */
+.swiper {
+    margin: auto;
+    width: 75%;
+    height: 100%;
+    
+  }
+  .swiper-wrapper{
+    align-items: center;    
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 2rem;
+    overflow: hidden;
+    
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: scale-down;
+    
+  }
+
 /* Navbar */
 nav{
     position: fixed;
